# workspace-cli

./: Cargo.toml
src/: lib.rs  main.rs
src/auth/: keyring_storage.rs  token.rs
src/client/: api_client.rs
src/config/: settings.rs
