[package]
name = "workspace-cli"
version = "0.1.0"
edition = "2021"
description = "High-performance Google Workspace CLI for AI agent integration"
license = "MIT"

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"], optional = true }

# HTTP & Serialization
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }

# Auth
yup-oauth2 = "11"
keyring = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.12"
csv = "1"
mime = "0.3"
mime_guess = "2"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dirs = "5"
toml = "0.8"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio-test = "0.4"
# wiremock has compatibility issues with current Rust version
# wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
